# ecbt

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  crates.js  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.cargo/: config
.github/workflows/: build.yml  release.yml  security.yml
crates/ecbt-apifiny/: Cargo.toml
crates/ecbt-binance/: Cargo.toml
crates/ecbt-binance/examples/: binance_client.rs  binance_http.rs  binance_ws.rs
crates/ecbt-binance/src/: binance_content_error.rs  binance_credentials.rs  binance_parameters.rs  lib.rs  transport.rs
crates/ecbt-binance/src/client/: account.rs  base_client.rs  general.rs  market.rs  mod.rs  stream.rs  userstream.rs
crates/ecbt-binance/src/model/: account_information.rs  all_order_req.rs  ask_bid.rs  balance.rs  book_tickers.rs  exchange_filter.rs  exchange_information.rs  interval.rs  kline.rs  kline_params.rs  kline_summaries.rs  kline_summary.rs  market_pair.rs  mod.rs  order.rs  order_book.rs  order_canceled.rs  order_exec_type.rs  order_reject_reason.rs  order_request.rs  order_status.rs  order_type.rs  paginator.rs  price_stats.rs  prices.rs  rate_limit.rs  rate_limit_type.rs  server_time.rs  side.rs  success.rs  symbol.rs  symbol_filter.rs  symbol_price.rs  ticker.rs  time_in_force.rs  trade_history.rs  trade_history_req.rs  transaction.rs  user_data_stream.rs
crates/ecbt-binance/src/model/websocket/: account_update.rs  account_update_balance.rs  aggregate_trade.rs  binance_subscription.rs  binance_websocket_message.rs  candlestick_message.rs  depth.rs  mini_ticker.rs  mod.rs  ticker.rs  trade_message.rs  user_order_update.rs
crates/ecbt-coinbase/: Cargo.toml
crates/ecbt-coinbase/examples/: coinbase_http.rs  coinbase_ws.rs
crates/ecbt-coinbase/src/: coinbase_content_error.rs  coinbase_credentials.rs  coinbase_parameters.rs  lib.rs  prelude.rs  transport.rs
crates/ecbt-coinbase/src/client/: account.rs  base_client.rs  market.rs  mod.rs  stream.rs
crates/ecbt-coinbase/src/model/: account.rs  book.rs  book_level.rs  book_record_l1.rs  book_record_l2.rs  book_record_l3.rs  cancel_after.rs  cancel_all_orders.rs  cancel_order.rs  candle.rs  candle_request_params.rs  data_range.rs  fill.rs  get_fills_req.rs  get_order_request.rs  market_pair.rs  mod.rs  order.rs  order_request.rs  order_request_market_type.rs  order_request_type.rs  order_side.rs  order_status.rs  order_stop.rs  order_stop_type.rs  order_time_in_force.rs  order_time_in_force_response.rs  order_type.rs  paginator.rs  product.rs  ticker.rs  trade.rs
crates/ecbt-coinbase/src/model/websocket/: activate.rs  auth.rs  change.rs  channel.rs  channel_type.rs  coinbase_subscription.rs  coinbase_websocket_message.rs  done.rs  full.rs  input_message.rs  level2.rs  level2_snapshot_record.rs  level2_update_record.rs  match_.rs  mod.rs  open.rs  reason.rs  received.rs  stop_type.rs  subscribe.rs  subscribe_cmd.rs  ticker.rs
crates/ecbt-exchange/: Cargo.toml
crates/ecbt-exchange/src/: errors.rs  exchange.rs  lib.rs  shared.rs
crates/ecbt-exchange/src/info/: exchange_info.rs  exchange_info_retrieval.rs  market_pair.rs  market_pair_handle.rs  mod.rs  utils.rs
crates/ecbt-exchange/src/message/: mod.rs  request.rs  subscription.rs
crates/ecbt-exchange/src/model/: ask_bid.rs  balance.rs  candle.rs  currency.rs  interval.rs  liquidity.rs  market_pair.rs  mod.rs  order.rs  order_canceled.rs  order_filter.rs  order_status.rs  order_type.rs  paginator.rs  ticker.rs  time_in_force.rs  time_in_force_visitor.rs  trade.rs  transaction.rs  websocket.rs
crates/ecbt-exchange/src/model/request/: cancel_all_order_request.rs  cancel_order_request.rs  ecbt_order_request.rs  get_historic_rates_request.rs  get_historic_trades_request.rs  get_order_history_request.rs  get_order_request.rs  get_price_ticker_request.rs  mod.rs  open_limit_order_request.rs  open_market_order_request.rs  order_book_request.rs  order_book_response.rs  trade_history_request.rs
crates/ecbt-exchange/src/stream/: callback_handle.rs  ecbt_stream.rs  exchange_stream.rs  mod.rs  open_limit_stream.rs  subscriptions.rs
crates/ecbt-ftx/: Cargo.toml  README.md
crates/ecbt-ftx/examples/: btc_price.rs  get_account.rs  lending.rs  list_markets.rs  watch_market.rs
crates/ecbt-ftx/src/: ftx_options.rs  lib.rs
crates/ecbt-ftx/src/rest/: mod.rs
crates/ecbt-ftx/src/ws/: mod.rs  tests.rs
crates/ecbt-huobi/: Cargo.toml
crates/ecbt-nash/: Cargo.toml
ecbt/: all.html  index.html  sidebar-items.js  struct.Ecbt.html
ecbt/errors/: enum.EcbtError.html  index.html  struct.MissingImplementationContent.html  type.Result.html
ecbt/exchange/: index.html  sidebar-items.js
ecbt/model/: enum.Interval.html  enum.Liquidity.html  enum.OrderStatus.html  enum.OrderType.html  enum.Side.html  enum.TimeInForce.html  index.html  struct.AskBid.html  struct.Balance.html  struct.CancelAllOrdersRequest.html  struct.CancelOrderRequest.html  struct.Candle.html  struct.EcbtOrderRequest.html  struct.GetHistoricRatesRequest.html  struct.GetHistoricTradesRequest.html  struct.GetOrderHistoryRequest.html  struct.GetOrderRequest.html  struct.GetPriceTickerRequest.html  struct.OpenMarketOrderRequest.html  struct.Order.html  struct.OrderBookRequest.html  struct.OrderBookResponse.html  struct.OrderCanceled.html  struct.OrderFilter.html  struct.Paginator.html  struct.Ticker.html  struct.TimeInForceVisitor.html  struct.Trade.html  struct.TradeHistoryRequest.html  struct.Transaction.html
ecbt/prelude/: enum.Interval.html  enum.Liquidity.html  enum.OrderStatus.html  enum.OrderType.html  enum.Side.html  enum.TimeInForce.html  fn.get_pair.html  index.html  sidebar-items.js  struct.AskBid.html  struct.Balance.html  struct.CallbackHandle.html  struct.CancelAllOrdersRequest.html  struct.CancelOrderRequest.html  struct.Candle.html  struct.EcbtOrderRequest.html  struct.EcbtStream.html  struct.ExchangeInfo.html  struct.GetHistoricRatesRequest.html  struct.GetHistoricTradesRequest.html  struct.Order.html  (+19 more)
examples/: ecbt_binance_http.rs  ecbt_binance_ws.rs
src/: lib.rs
(+343 files in other folders)
