[package]
name = "ecbt"
version = "0.1.0"
edition = "2021"
description = "High performance cryptocurrency trading API with support for user defined networking."
license = "BSD-2-Clause"
repository = "https://github.com/wmjtyd/ecbt"
keywords = ["cryptocurrency", "exchange", "ecbt", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.14.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[workspace]
members = ["crates/*"]
