[package]
name = "ecbt"
version = "0.0.0"
edition = "2021"
description = "High performance cryptocurrency trading API with support for user defined networking."
license = "BSD-2-Clause"
repository = "https://github.com/wmjtyd/ecbt"
keywords = ["cryptocurrency", "exchange", "ecbt", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "orderbook_http"
path = "examples/ecbt_binance_http.rs"

[[example]]
name = "orderbook_ws"
path = "examples/ecbt_binance_ws.rs"

[dependencies]
ecbt-exchange = { path = "crates/ecbt-exchange", version = "0.0.0" }
ecbt-binance = { path = "crates/ecbt-binance", version = "0.0.0" }
ecbt-coinbase = { path = "crates/ecbt-coinbase", version = "0.0.0" }

hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.2"

async-trait = "0.1.57"
futures = "0.3.21"
time = "0.3.13"
rust_decimal = "1.26.1"
url = "2.2.2"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_urlencoded = "0.7.1"
thiserror = "1.0.32"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }

tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter"] }

[workspace]
members = ["crates/*"]
