[package]
name = "ecbt-exchange"
version = "0.1.0"
edition = "2021"
description = "The exchange traits of Ecbt."
license = "BSD-2-Clause"
repository = "https://github.com/wmjtyd/ecbt"
keywords = ["cryptocurrency", "exchange", "ecbt", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3.19"
time = "0.3.9"
rust_decimal = "1.23.1"
url = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.8"
serde_urlencoded = "0.7.0"
thiserror = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = { version = "0.13", features = ["tls"] }